--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 @import url("font-awesome.min.css");
 
-/*
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -2125,48 +2119,38 @@ input, select, textarea {
 
 /* Footer */
 
-	#footer {
-		color: rgba(255, 255, 255, 0.45);
-		text-align: center;
+	footer {
+		color: rgba(255, 255, 255, 0.65);
+		display: flex;
+		justify-content: space-between;
 		padding: 2em 0 0 0;
 		font-size: 0.75em;
+		width: 88%;
 	}
 
-		#footer a {
+		footer a {
 			color: #ddd;
 			color: rgba(255, 255, 255, 0.65);
 			-moz-transition: color .25s ease-in-out;
 			-webkit-transition: color .25s ease-in-out;
 			-ms-transition: color .25s ease-in-out;
 			transition: color .25s ease-in-out;
+			
 		}
 
-			#footer a:hover {
+			footer a:hover {
 				color: white;
 			}
 
-		#footer .copyright {
-			list-style: none;
-			padding-left: 0;
+		footer .social-icons {
+			font-size: 2.5em;
 		}
 
-			#footer .copyright li {
-				display: inline-block;
-				padding-left: 1em;
-				margin-left: 1em;
-				border-left: solid 1px rgba(255, 255, 255, 0.25);
-				line-height: 1;
-			}
 
-				#footer .copyright li:first-child {
-					padding-left: 0;
-					margin-left: 0;
-					border-left: 0;
-				}
 
 		@media screen and (max-width: 736px) {
 
-			#footer .copyright li {
+			footer .copyright li {
 				padding-left: 0.5em;
 				margin-left: 0.5em;
 			}
