--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -798,10 +798,10 @@
 /* Footer */
 
 	#footer {
-		color: rgba(255, 255, 255, 0.45);
+		color: white;
 		text-align: center;
 		padding: 2em 0 0 0;
-		font-size: 0.75em;
+		font-size: 2em;
 
 		a {
 			color: #ddd;
